service.yaml
apiVersion: v1
kind: Service
metadata:
  name: srs
spec:
  selector:
    app: srs
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080
  type: NodePort
